package solid_design_principal.DependencyInversionPrincipal;

public interface DBPersistence {
    void saveToDB();
}
