package solid_design_principal.DependencyInversionPrincipal;

public class SaveToMongoDB {
    public void saveToDB() {
        System.out.println("Data saved to MongoDB Database");
    }
}
