package solid_design_principal.DependencyInversionPrincipal;

public class SaveToSqlDB {
    public void saveToDB() {
        System.out.println("Data saved to SQL Database");
    }
}
